// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Merge request dashboard assigned users component as reviewer list renders review state icon 1`] = `
<span
  class="-gl-bottom-2 -gl-right-2 gl-absolute gl-bg-status-danger gl-flex gl-h-5 gl-items-center gl-justify-center gl-p-1 gl-rounded-full gl-w-5"
  data-testid="review-state-icon"
>
  <svg
    aria-hidden="true"
    class="gl-block gl-fill-current gl-fill-status-danger gl-icon s12"
    data-testid="error-icon"
    role="img"
  >
    <use
      href="file-mock#error"
    />
  </svg>
</span>
`;

exports[`Merge request dashboard assigned users component renders user avatars 1`] = `
<div
  class="gl-flex gl-justify-center mr-users-list"
>
  <div
    class="gl-avatars-inline gl-avatars-inline-lg"
  >
    <div
      class="gl-avatars-inline-child"
    >
      <a
        class="gl-avatar-link gl-link gl-relative js-user-link"
        data-name="Admin"
        data-testid="assigned-user"
        data-user-id="2"
        href="/root"
        target="blank"
      >
        <img
          alt="avatar"
          class="!gl-bg-white gl-avatar gl-avatar-circle gl-avatar-s32"
          src="/root"
        />
        <span
          class="-gl-bottom-2 -gl-right-2 gl-absolute gl-bg-status-danger gl-flex gl-h-5 gl-items-center gl-justify-center gl-p-1 gl-rounded-full gl-w-5"
          data-testid="review-state-icon"
        >
          <svg
            aria-hidden="true"
            class="gl-block gl-fill-current gl-fill-status-danger gl-icon s12"
            data-testid="error-icon"
            role="img"
          >
            <use
              href="file-mock#error"
            />
          </svg>
        </span>
      </a>
    </div>
    <div
      class="gl-avatars-inline-child"
    >
      <a
        class="gl-avatar-link gl-link gl-relative js-user-link"
        data-name="Admin"
        data-testid="assigned-user"
        data-user-id="1"
        href="/root"
        target="blank"
      >
        <img
          alt="avatar"
          class="!gl-bg-white gl-avatar gl-avatar-circle gl-avatar-s32"
          src="/root"
        />
      </a>
    </div>
  </div>
</div>
`;
